	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHHttpServer::addCgiSource()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Extended CGI support to include POST method calls.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused 'WHHttpServer' to segfault when collecting
	garbage from stale connections.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'WHHttpServer::requestReceived()' signal from
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added 'WHHttpServer::requestReceived()' virtual method to
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'maxsize' parameter from the constructor of the
	'WHCgiApplication' class in 'src/wh/whcgiapplication.cpp' and
	'src/wh/whcgiapplication.h'.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/wh/whhttpconnection.cpp' that was causing
	incorrect values to be passed in the 'HTTP_HOST' parameter to CGI
	processes.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Changed the 'WHHttpServer::requestReceived(int,WHHttpRequest *)'
	method to 'WHHttpServer::requestReceived(WHHttpConnection *)' in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHHttpUser' class in 'src/wh/whhttpuser.cpp' and
	'src/wh/whhttpuser.h'.
	* Added 'WHHttpServer::userRealms()', 'WHHttpServer::userNames()',
	'WHHttpServer::addUser()' and 'WHHttpServer::removeUser()' methods
	in 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added support for HTTP Basic authentication.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'maxsize' parameter from the constructor of the
	'WHCgiPost' class in 'src/wh/whcgipost.cpp' and
	'src/wh/whcgipost.h'.