@@ -222,3 +222,6 @@
 	* Removed the 'maxsize' parameter from the constructor of the
 	'WHCgiPost' class in 'src/wh/whcgipost.cpp' and
 	'src/wh/whcgipost.h'.
+2016-02-24 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'WHHttpServer::loadUsers()' and 'WHHttpServer::saveUsers()'
+	methods in 'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
